stylesheet.css
/* ... */
@-o-keyframes bannar_come {
	0% {
		-o-transform: translate(0px, -1000px);
	}

	33% {
		-o-transform: translate(0px, 0px);
		-o-transform: rotate(10deg);
		/*-webkit-transform:scale(1.5);*/
	}

	66% {
		-o-transform: translate(0px, 100px);
		-o-transform: rotate(-10deg);
	}

	100% {
		-o-transform: translate(0px, 0px);
	}
}

@-ms-keyframes bannar_come {
	0% {
		-ms-transform: translate(0px, -1000px);
	}

	33% {
		-ms-transform: translate(0px, 0px);
		-ms-transform: rotate(10deg);
		/*-webkit-transform:scale(1.5);*/
	}

	66% {
		-ms-transform: translate(0px, 100px);
		-ms-transform: rotate(-10deg);
	}

	100% {
		-ms-transform: translate(0px, 0px);
	}
}

o @keyframes bannar_come {
	0% {
		transform: translate(0px, -1000px);
	}

	33% {
		transform: translate(0px, 0px);
		transform: rotate(10deg);
		/*-webkit-transform:scale(1.5);*/
	}

	66% {
		transform: translate(0px, 100px);
		transform: rotate(-10deg);
	}

	100% {
		transform: translate(0px, 0px);
	}
}

.balloons {
	position: fixed;
	bottom: -200px;
	opacity: 0.6;
	z-index: 99;
	width: 70px;
	height: 128px;
	background-repeat: no-repeat no-repeat;
	background-size: 70px 128px;
}

.balloons h2 {
	text-transform: uppercase;
	font-family: 'Signika', sans-serif;
	font-size: 35px;
	color: #BF4136;
	text-shadow: 3px 3px 3px #FFF;
	display: none;
	margin-top: 12px;
}

#b1,
#b11 {
	background-image: url('b1.png');
}

#b2,
#b22 {
	background-image: url('b2.png');
}

#b3,
#b33 {
	background-image: url('b3.png');
}

#b4,
#b44 {
	background-image: url('b4.png');
}

#b5,
#b55 {
	background-image: url('b5.png');
}

#b6,
#b66 {
	background-image: none;
}

#b7,
#b77 {
	background-image: url('b7.png');
}

#b8,
#b88 {
	background-image: url('b1.png');
}

#b9,
#b99 {
	background-image: url('b2.png');
}

.balloons-rotate-behaviour-one {
	-webkit-animation: balloons_rotate_one linear 10s infinite;
	-webkit-transform: rotate(30deg);
	-moz-animation: balloons_rotate_one linear 10s infinite;
	-moz-transform: rotate(30deg);
	-o-animation: balloons_rotate_one linear 10s infinite;
	-o-transform: rotate(30deg);
	-ms-animation: balloons_rotate_one linear 10s infinite;
	-ms-transform: rotate(30deg);
	animation: balloons_rotate_one linear 10s infinite;
	transform: rotate(30deg);
}

@-webkit-keyframes balloons_rotate_one {
	0% {
		-webkit-transform: rotate(30deg);
	}

	50% {
		-webkit-transform: rotate(-30deg);
	}

	100% {
		-webkit-transform: rotate(30deg);
	}
}

@-moz-keyframes balloons_rotate_one {
	0% {
		-moz-transform: rotate(30deg);
	}

	50% {
		-moz-transform: rotate(-30deg);
	}

	100% {
		-moz-transform: rotate(30deg);
	}
}

@-o-keyframes balloons_rotate_one {
	0% {
		-o-transform: rotate(30deg);
	}

	50% {
		-o-transform: rotate(-30deg);
	}

	100% {
		-o-transform: rotate(30deg);
	}
}

@-ms-keyframes balloons_rotate_one {
	0% {
		-ms-transform: rotate(30deg);
	}

	50% {
		-ms-transform: rotate(-30deg);
	}

	100% {
		-ms-transform: rotate(30deg);
	}
}

@keyframes balloons_rotate_one {
	0% {
		transform: rotate(30deg);
	}

	50% {
		transform: rotate(-30deg);
	}

	100% {
		transform: rotate(30deg);
	}
}

.balloons-rotate-behaviour-two {
	-webkit-animation: balloons_rotate_two linear 10s infinite;
	-webkit-transform: rotate(-20deg);
	-moz-animation: balloons_rotate_two linear 10s infinite;
	-moz-transform: rotate(-20deg);
	-o-animation: balloons_rotate_two linear 10s infinite;
	-o-transform: rotate(-20deg);
	-ms-animation: balloons_rotate_two linear 10s infinite;
	-ms-transform: rotate(-20deg);
	animation: balloons_rotate_two linear 10s infinite;
	transform: rotate(-20deg);
}

@-webkit-keyframes balloons_rotate_two {
	0% {
		-webkit-transform: rotate(-20deg);
	}

	50% {
		-webkit-transform: rotate(20deg);
	}

	100% {
		-webkit-transform: rotate(-20deg);
	}
}

@-moz-keyframes balloons_rotate_two {
	0% {
		-moz-transform: rotate(-20deg);
	}

	50% {
		-moz-transform: rotate(20deg);
	}

	100% {
		-moz-transform: rotate(-20deg);
	}
}

@-o-keyframes balloons_rotate_two {
	0% {
		-o-transform: rotate(-20deg);
	}

	50% {
		-o-transform: rotate(20deg);
	}

	100% {
		-o-transform: rotate(-20deg);
	}
}

@-ms-keyframes balloons_rotate_two {
	0% {
		-ms-transform: rotate(-20deg);
	}

	50% {
		-ms-transform: rotate(20deg);
	}

	100% {
		-ms-transform: rotate(-20deg);
	}
}

@keyframes balloons_rotate_two {
	0% {
		transform: rotate(-20deg);
	}

	50% {
		transform: rotate(20deg);
	}

	100% {
		transform: rotate(-20deg);
	}
}

.balloon-border {
	position: fixed;
	top: 100%;
	opacity: 0.5;
	z-index: 9999;
}

.control-panel {
	position: fixed;
	bottom: 0;
	padding: 10px 0px 10px 0px;
}

#turn_on,
#confetti_launch,
#play,
#bannar_coming,
#balloons_flying,
#cake_fadein,
#light_candle,
#wish_message,
#story {
	display: none;
}

.cake-cover {
	margin-top: 120px;
}

.message {
	margin-top: 270px;
	display: none;
}

.message p {
	font-family: 'Signika', sans-serif;
	font-size: 30px;
	text-transform: uppercase;
	color: #C4515C;
	text-shadow: 2px 2px 2px #FFF;
	display: none;
	font-weight: bold;
}

.btn-primary {
	border-color: #466baf;
	padding: 10px;
	text-transform: uppercase;
	font-family: 'Signika', sans-serif;
	font-weight: 700;
	color: #fff;
	background-color: #466baf;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
	border-color: #fff;
	color: #fff;
	background-color: #466baf;
}



/*controlling tablet width*/
/*@media only screen and (max-width: 720px){
    	.container {
    		-webkit-transform: scale(0.9);
    	}
    }*/

/* Sidebar Bulbs (Left & Right) */
.bulbs-sidebar {
	position: fixed;
	top: 8vh;
	bottom: 8vh;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	z-index: 1000;
}

.left-sidebar {
	left: 20px;
}

.left-sidebar .bulb {
	transform: rotate(270deg);
}

.right-sidebar {
	right: 20px;
}

.right-sidebar .bulb {
	transform: rotate(90deg);
}
/* ... */

